--- a/codeblocks/HGPlayersPanel.cbp
+++ b/codeblocks/HGPlayersPanel.cbp
@@ -135,6 +135,8 @@
 		<Unit filename="../src/pages/default.h" />
 		<Unit filename="../src/pages/error.cpp" />
 		<Unit filename="../src/pages/error.h" />
+		<Unit filename="../src/pages/logout.cpp" />
+		<Unit filename="../src/pages/logout.h" />
 		<Unit filename="../src/pages/passChange.cpp" />
 		<Unit filename="../src/pages/passChange.h" />
 		<Unit filename="../src/pages/passRecovery.cpp" />
