--- a/codeblocks/HGPlayersPanel.cbp
+++ b/codeblocks/HGPlayersPanel.cbp
@@ -4,7 +4,6 @@
 	<Project>
 		<Option title="HGPlayersPanel" />
 		<Option pch_mode="2" />
-		<Option default_target="Release" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
@@ -31,7 +30,6 @@
 				<Option object_output="Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="--docroot . --http-address 0.0.0.0 --http-port 8080" />
 				<Compiler>
 					<Add option="-fomit-frame-pointer" />
 					<Add option="-fexpensive-optimizations" />
@@ -74,7 +72,6 @@
 				<Option object_output="ReleaseFcgi/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="--docroot . --http-address 0.0.0.0 --http-port 8080" />
 				<Compiler>
 					<Add option="-fomit-frame-pointer" />
 					<Add option="-fexpensive-optimizations" />
@@ -145,6 +142,8 @@
 		<Unit filename="../src/pages/register.h" />
 		<Unit filename="../src/pages/serverStatus.cpp" />
 		<Unit filename="../src/pages/serverStatus.h" />
+		<Unit filename="../src/pages/teleport.cpp" />
+		<Unit filename="../src/pages/teleport.h" />
 		<Unit filename="../src/slotItems.cpp" />
 		<Unit filename="../src/slotItems.h" />
 		<Extensions>
