--- a/codeblocks/HGPlayersPanel.cbp
+++ b/codeblocks/HGPlayersPanel.cbp
@@ -143,6 +143,7 @@
 		<Unit filename="../src/pages/register.h" />
 		<Unit filename="../src/pages/serverStatus.cpp" />
 		<Unit filename="../src/pages/serverStatus.h" />
+		<Unit filename="../src/pages/teleport.cpp" />
 		<Unit filename="../src/pages/teleport.h" />
 		<Unit filename="../src/slotItems.cpp" />
 		<Unit filename="../src/slotItems.h" />
