--- a/codeblocks/HGPlayersPanel.cbp
+++ b/codeblocks/HGPlayersPanel.cbp
@@ -119,6 +119,7 @@
 		<Unit filename="../LICENCE_PL" />
 		<Unit filename="../sql/char.sql" />
 		<Unit filename="../sql/panel.sql" />
+		<Unit filename="../sql/spell.sql" />
 		<Unit filename="../src/config.h" />
 		<Unit filename="../src/config.h.dist" />
 		<Unit filename="../src/database.cpp" />
