Localizations: - remove DB based localizations - implement XML based localizations by using WT Message Resource Bundle - move all previous texts from SQL to XML - now localizations will be stored in xml files (1 file for 1 language)
Implement base for multi realm support and use it in server status page

some changes in panel DB structure
some cleanup

TODO: check for bugs etc, more cleanup :P

--- a/codeblocks/HGPlayersPanel.cbp
+++ b/codeblocks/HGPlayersPanel.cbp
@@ -21,6 +21,7 @@
 				<ExtraCommands>
 					<Add after="cp -r ../img ./Debug/" />
 					<Add after="cp -r ../css ./Debug/" />
+					<Add after="cp -r ../langs ./Debug/" />
 					<Add after="cp ../favicon.ico ./Debug/" />
 					<Mode after="always" />
 				</ExtraCommands>
@@ -45,6 +46,7 @@
 				<ExtraCommands>
 					<Add after="cp -r ../img ./Release/" />
 					<Add after="cp -r ../css ./Release/" />
+					<Add after="cp -r ../langs ./Release/" />
 					<Add after="cp ../favicon.ico ./Release/" />
 					<Mode after="always" />
 				</ExtraCommands>
@@ -64,6 +66,7 @@
 				<ExtraCommands>
 					<Add after="cp -r ../img ./Debug/" />
 					<Add after="cp -r ../css ./Debug/" />
+					<Add after="cp -r ../langs ./Debug/" />
 					<Add after="cp ../favicon.ico ./Debug/" />
 					<Mode after="always" />
 				</ExtraCommands>
@@ -87,6 +90,7 @@
 				<ExtraCommands>
 					<Add after="cp -r ../img ./Release/" />
 					<Add after="cp -r ../css ./Release/" />
+					<Add after="cp -r ../langs ./Release/" />
 					<Add after="cp ../favicon.ico ./Release/" />
 					<Mode after="always" />
 				</ExtraCommands>
@@ -117,6 +121,8 @@
 		</Linker>
 		<Unit filename="../LICENCE" />
 		<Unit filename="../LICENCE_PL" />
+		<Unit filename="../langs/panel.xml" />
+		<Unit filename="../langs/panel_pl.xml" />
 		<Unit filename="../sql/char.sql" />
 		<Unit filename="../sql/panel.sql" />
 		<Unit filename="../sql/spell.sql" />
