move global functions to namespaces Misc::* update year in copyrights

--- a/codeblocks/HGPlayersPanel.cbp
+++ b/codeblocks/HGPlayersPanel.cbp
@@ -137,14 +137,22 @@
 		<Unit filename="../src/main.h" />
 		<Unit filename="../src/menu.cpp" />
 		<Unit filename="../src/menu.h" />
+		<Unit filename="../src/misc.cpp" />
+		<Unit filename="../src/misc.h" />
+		<Unit filename="../src/miscCharacter.cpp" />
+		<Unit filename="../src/miscCharacter.h" />
+		<Unit filename="../src/miscClient.cpp" />
+		<Unit filename="../src/miscClient.h" />
+		<Unit filename="../src/miscError.cpp" />
+		<Unit filename="../src/miscError.h" />
+		<Unit filename="../src/miscHash.cpp" />
+		<Unit filename="../src/miscHash.h" />
 		<Unit filename="../src/pages/accInfo.cpp" />
 		<Unit filename="../src/pages/accInfo.h" />
 		<Unit filename="../src/pages/characters.cpp" />
 		<Unit filename="../src/pages/characters.h" />
 		<Unit filename="../src/pages/default.cpp" />
 		<Unit filename="../src/pages/default.h" />
-		<Unit filename="../src/pages/error.cpp" />
-		<Unit filename="../src/pages/error.h" />
 		<Unit filename="../src/pages/licence.cpp" />
 		<Unit filename="../src/pages/licence.h" />
 		<Unit filename="../src/pages/logout.cpp" />
