--- a/src/config.h.dist
+++ b/src/config.h.dist
@@ -1,23 +1,3 @@
-/*
-*    HG Players Panel - web panel for HellGround server Players
-*    Copyright (C) 2011-2012 HellGround Team : Siof, lukaasm,
-*
-*    This program is free software: you can redistribute it and/or modify
-*    it under the terms of the GNU Affero General Public License version 3 as
-*    published by the Free Software Foundation.
-*
-*    This program is distributed in the hope that it will be useful,
-*    but WITHOUT ANY WARRANTY; without even the implied warranty of
-*    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-*    GNU Affero General Public License for more details.
-*
-*    You should have received a copy of the GNU Affero General Public License
-*    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-*
-*    You can copy/rename this file to config.h and edit it to provide app configuration.
-*    Configuration in file config.h shouldn't be share under licence terms.
-*/
-
 /********************************************//**
  * \addtogroup Configuration
  * \{
@@ -124,6 +104,10 @@ static const char * realmsInfo[REALMS_COUNT][4] =
         "2"                                     // realm 2 id in DB
     }
 };
+
+#define TMPLT_DEFAULT_NAME          "default"               /**< default template name */
+#define TMPLT_DEFAULT_STYLE_PATH    "res/templates/default" /**< path to style.css for default template */
+#define TMPLT_DEFAULT_TMPLT_PATH    "res/templates/default" /**< path to tmplt file for default template */
 
 #endif // CONFIG_H_INCLUDED
 
