--- a/src/config.h.dist
+++ b/src/config.h.dist
@@ -43,7 +43,7 @@
 #define PASSWORD_LENGTH_MIN     8           /**< Minimum password length */
 #define PASSWORD_LENGTH_MAX     16          /**< Maximum password length */
 
-#define LOGIN_VALIDATOR         "[a-zA-Z0-9_]{6,16}"    /**< regex to valid login, in {} should be min and max login length */
+#define LOGIN_VALIDATOR         "[a-zA-Z0-9_-]{6,16}"    /**< regex to valid login, in {} should be min and max login length */
 
 #define MAIL_FROM   "kontakt@gamefreedom.pl"    /**< email addres for "from" clause */
 
